--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/home/wanderss/.cache/pypoetry/virtualenvs/ac4-z3g6Th9z-py3.8/bin/python"
+    "python.pythonPath": "/home/carlos-rian/.cache/pypoetry/virtualenvs/ac4-5vM_v3Xw-py3.8/bin/python3"
 }
